--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 .vscode
+
+paquete/paquete/.dart_tool/
+paquete/paquete/.packages
+paquete/paquete/pubspec.lock
+paquete/paquete/build/
+paquete/paquete/doc/api/
+
+
+
+
